# dxvk-nvapi

./: .clang-format  .clang-format-ignore  .clang-tidy-ignore  .gitattributes  .gitignore  .gitmodules  BuildAndInstall.sh  LICENSE  README.md  build-win32-llvm.txt  build-win32.txt  build-win64-llvm.txt  build-win64.txt  config.h.in  create-compilation-database.sh  meson.build  meson_options.txt  package-release.sh  validate-methods.py  version.h.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: artifacts.yml  build-llvm.yml  build-package-llvm.yml  build-proton.yml  build-test-package-linux.yml  build-test-windows.yml  test-build-windows.yml
inc/: NvApiDriverSettings.c  NvApiDriverSettings.h  d3d12.h  nvShaderExtnEnums.h  nvapi.h  nvapi_interface.h  nvml.h  vulkan_core.h
inc/catch2/: catch_amalgamated.cpp  catch_amalgamated.hpp
inc/nvml/: nvml.h
inc/nvofapi/: nvOpticalFlowCommon.h  nvOpticalFlowCuda.h  nvOpticalFlowD3D11.h  nvOpticalFlowD3D12.h  nvOpticalFlowVulkan.h
layer/: VkLayer_DXVK_NVAPI_reflex.json  VkLayer_DXVK_NVAPI_reflex.json.in  log.h  meson.build  meson.options  vulkan_reflex_layer.cpp
src/: meson.build  nvapi.cpp  nvapi.def  nvapi64.def  nvapi_adapter.cpp  nvapi_adapter.h  nvapi_adapter_registry.cpp  nvapi_adapter_registry.h  nvapi_d3d.cpp  nvapi_d3d11.cpp  nvapi_d3d12.cpp  nvapi_disp.cpp  nvapi_drs.cpp  nvapi_globals.cpp  nvapi_globals.h  nvapi_gpu.cpp  nvapi_interface.cpp  nvapi_mosaic.cpp  nvapi_ngx.cpp  nvapi_output.cpp  nvapi_output.h  nvapi_private.h  nvapi_static.h  nvapi_sys.cpp  nvapi_vkreflex.cpp  nvapi_vulkan.cpp  nvofapi.cpp  nvofapi64.def  nvofapi_cuda.cpp  nvofapi_d3d11.cpp  nvofapi_d3d12.cpp  nvofapi_entrypoints.h  nvofapi_globals.cpp  nvofapi_globals.h  nvofapi_private.h  nvofapi_vk.cpp  nvofapi_vulkan.cpp  resource_factory.cpp  resource_factory.h  version.rc
src/d3d/: lfx.cpp  lfx.h  nvapi_d3d_instance.cpp  nvapi_d3d_instance.h  nvapi_d3d_low_latency_device.cpp  nvapi_d3d_low_latency_device.h
src/d3d11/: nvapi_d3d11_device.cpp  nvapi_d3d11_device.h
src/d3d12/: nvapi_d3d12_device.cpp  nvapi_d3d12_device.h  nvofapi_d3d12_instance.cpp  nvofapi_d3d12_instance.h
src/dxvk/: com_pointer.h  dxvk_interfaces.cpp  dxvk_interfaces.h
src/impl/: nvapi_adapter.cpp  nvapi_adapter.h  nvapi_adapter_registry.cpp  nvapi_adapter_registry.h  nvapi_output.cpp  nvapi_output.h
src/interfaces/: dxvk_interfaces.h  shared_interfaces.h  vkd3d-proton_interfaces.h
src/nvapi/: lfx.cpp  low_latency_frame_id_generator.cpp  low_latency_frame_id_generator.h  nvapi_adapter.cpp  nvapi_adapter.h  nvapi_adapter_registry.cpp  nvapi_adapter_registry.h  nvapi_d3d11_device.cpp  nvapi_d3d11_device.h  nvapi_d3d12_command_queue.cpp  nvapi_d3d12_command_queue.h  nvapi_d3d12_device.cpp  nvapi_d3d12_device.h  nvapi_d3d12_graphics_command_list.cpp  nvapi_d3d12_graphics_command_list.h  nvapi_d3d_instance.cpp  nvapi_d3d_instance.h  nvapi_d3d_low_latency_device.cpp  nvapi_d3d_low_latency_device.h  nvapi_output.cpp  nvapi_resource_factory.cpp  nvapi_resource_factory.h  nvapi_vulkan_low_latency_device.cpp  nvapi_vulkan_low_latency_device.h  nvml.cpp  nvml.h  resource_factory.cpp  resource_factory.h  vk.cpp  vk.h
src/nvml/: nvml.cpp  nvml.h
src/nvofapi/: nvofapi.h  nvofapi_common.cpp  nvofapi_d3d12.cpp  nvofapi_d3d12_instance.cpp  nvofapi_d3d12_instance.h  nvofapi_entrypoints.cpp  nvofapi_entrypoints.h  nvofapi_image.cpp  nvofapi_image.h  nvofapi_image_vk.cpp  nvofapi_image_vk.h  nvofapi_instance.cpp  nvofapi_instance.h  nvofapi_vk_instance.cpp  nvofapi_vk_instance.h  nvofapi_vulkan.cpp  nvofapi_vulkan_instance.cpp  nvofapi_vulkan_instance.h
src/shared/: resource_factory.cpp  resource_factory.h  shared_interfaces.h  vk.cpp  vk.h
src/sysinfo/: nvapi_adapter.cpp  nvapi_adapter.h  nvapi_adapter_registry.cpp  nvapi_adapter_registry.h  nvapi_output.cpp  nvapi_output.h  nvml.cpp  nvml.h  resource_factory.cpp  resource_factory.h  vulkan.cpp  vulkan.h
src/util/: com_pointer.h  util_dlss.h  util_drs.cpp  util_drs.h  util_env.cpp  util_env.h  util_error.h  util_latency_marker_code.h  util_log.cpp  util_log.h  util_ngx_debug.h  util_op_code.h  util_pso_extension.h  util_raytracing_caps.h  util_statuscode.h  util_string.cpp  util_string.h  util_version.h
src/vkd3d-proton/: vkd3d-proton_interfaces.cpp  vkd3d-proton_interfaces.h
src/vulkan/: nvofapi_vulkan_instance.cpp  nvofapi_vulkan_instance.h
tests/: main.cpp  meson.build  mock_factory.cpp  mock_factory.h  nvapi.cpp  nvapi_d3d.cpp  nvapi_d3d11.cpp  nvapi_d3d11_mocks.cpp  nvapi_d3d11_mocks.h  nvapi_d3d12.cpp  nvapi_d3d12_capabilities.cpp  nvapi_d3d12_mocks.cpp  nvapi_d3d12_mocks.h  nvapi_d3d_mocks.cpp  nvapi_d3d_mocks.h  nvapi_drs.cpp  nvapi_main.cpp  nvapi_ngx.cpp  nvapi_sysinfo.cpp  nvapi_sysinfo_hdr.cpp  nvapi_sysinfo_mocks.cpp  nvapi_sysinfo_mocks.h  nvapi_sysinfo_nvml.cpp  nvapi_sysinfo_topo.cpp  nvapi_sysinfo_util.cpp  nvapi_system.cpp  nvapi_tests.cpp  nvapi_tests_private.h  nvapi_vulkan.cpp  nvapi_vulkan_mocks.h  nvofapi_cuda.cpp  nvofapi_d3d11.cpp  nvofapi_d3d12.cpp  nvofapi_main.cpp  nvofapi_tests_private.h  nvofapi_vk.cpp  perf.cpp  resource_factory_util.cpp  resource_factory_util.h  section_ended_listener.h  (+2 more)
tests/mocks/: d3d11_mocks.h  d3d12_mocks.h  d3d_mocks.h  dxgi_mocks.h  lfx_mocks.h  nvml_mocks.h  vulkan_mocks.h
tests/nvapi/: default_test_environment.cpp  default_test_environment.h  extended_test_environment.cpp  extended_test_environment.h  mock_factory.cpp  mock_factory.h  resource_factory_util.cpp  resource_factory_util.h  section_listener.h
tests/nvofapi/: mock_factory.h  section_listener.h
